new changes with geocoding zipcode, form validation, and real time input

--- a/src/app/components/historical/historical.component.html
+++ b/src/app/components/historical/historical.component.html
@@ -1,3 +1,4 @@
+<h1 style="text-align:center">{{city}}</h1>
   <div class="row">
     <div class="col-lg-2">
       <div class="card" style="width: 20rem;">
