--- a/src/app/components/forecast/forecast.component.html
+++ b/src/app/components/forecast/forecast.component.html
@@ -1,3 +1,4 @@
+<h1 style="text-align:center">{{city}}</h1>
 <div class="container">
   <div class="row no-gutters">
     <div class="col-md-3 padding-0" *ngFor="let daily1 of daily; let i=index">
