--- a/src/app/components/navbar/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar/navbar.component.html
@@ -26,8 +26,8 @@
         <div *ngIf="zipcode.errors && (zipcode.invalid || zipcode.touched)">
           <small class="text-danger" *ngIf="zipcode.errors['pattern']">Not a valid 5 digit zipcode</small>
       </div>
-      <button type="button" routerLink="/signin" class="btn btn-link" data-toggle="modal" data-target="#exampleModal" >Sign in</button>
-        <button routerLink="/create" class="btn btn-link" type="submit">Create an Account</button> 
+      <button type="button" routerLink="/signin" class="btn btn-link"  >Sign in</button>
+        <button type="button" routerLink="/create" class="btn btn-link" >Create an Account</button> 
       </form>
       </nav>
   
