--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -24,8 +24,8 @@
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search by your Zipcode</button>
       
-        <button type="button" class="btn btn primary" type="submit" data-toggle="modal" data-target="#exampleModal" >Sign in</button>
-        <button class="btn btn-link" type="submit">Create an Account</button>
+        <button type="button" class="btn btn primary" >Sign in</button>
+        <button class="btn btn-link" type="button">Create an Account</button>
 
         
       </form>
