--- a/src/app/components/today/today.component.html
+++ b/src/app/components/today/today.component.html
@@ -1,4 +1,4 @@
-
+<h1 style="text-align:center">{{city}}</h1>
                   <div *ngFor="let todays of today" data-spy="scroll" data-target="#list-example" data-offset="0" class="scrollspy-example">
                     <h4 class="text-center">Hourly Forecast</h4>
                     <p class="text-center" id="list-item-1">Time & Date: {{todays.dt | timeConverter}}</p>
